Fix layout of the report page on smaller screens in admin UI
Fix #17491

--- a/app/javascript/styles/mastodon/admin.scss
+++ b/app/javascript/styles/mastodon/admin.scss
@@ -1187,6 +1187,10 @@ a.sparkline {
       }
     }
   }
+
+  @media screen and (max-width: 930px) {
+    grid-template-columns: minmax(0, 1fr);
+  }
 }
 
 .account-card {
